Issue #82: improved word wrap for URLs

--- a/public/css/contenta-tables.css
+++ b/public/css/contenta-tables.css
@@ -28,6 +28,11 @@
 	border-style: solid;
 	border-color: #666666;
 	background-color: #ffffff;
+
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-word;
 }
 
 .mediaData tr.no-media td {
